--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,17 +28,11 @@ include_directories(SYSTEM ${catkin_INCLUDE_DIRS} ${LIBUSB_1_INCLUDE_DIRS})
 SET(CMAKE_CXX_FLAGS "-lusb-1.0")
 
 ## Declare a C++ executable
-add_executable(usbscaler src/my_minimal_publisher.cpp src/usbscale.c)
-#add_executable(my_minimal_subscriber src/my_minimal_subscriber.cpp)
+add_executable(usbscaler src/scale_publisher.cpp src/usbscale.c)
 
-## Add cmake target dependencies of the executable
-## same as for the library above
-# add_dependencies(my_minimal_nodes_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(usbscaler ${catkin_LIBRARIES} ${LIBUSB_1_INCLUDE_DIRS} usb-1.0 -lm)
 
-#target_link_libraries(my_minimal_subscriber ${catkin_LIBRARIES})
-#  ${catkin_LIBRARIES}
-# )
+
 
